--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -27,7 +27,7 @@ const { title, description } = Astro.props;
 		</div>
 
 		<script>
-			// Add “loaded” class once the document has completely loaded.
+			// Agrega la clase “loaded” una vez que el documento se haya cargado por completo.
 			addEventListener('load', () => document.documentElement.classList.add('loaded'));
 		</script>
 
