--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -3,6 +3,27 @@ import Hero from '../components/Hero.astro';
 import BaseLayout from '../layouts/BaseLayout.astro';
 ---
 
-<BaseLayout title="Not Found" description="404 Error — this page was not found">
-	<Hero title="Page Not Found" tagline="Not found" />
+<BaseLayout title="404 - Not Found" description="404 Error — this page was not found">
+	<Hero title="404" tagline="Page Not Found" >
+
+		<div class="notFound_image">
+			<img
+				  width="600"
+				  height="400"
+				  src="/assets/404-image.png"
+				  alt="Jairo Avila at work with a colleague"
+				/>
+		</div>
+		
+	</Hero>
 </BaseLayout>
+
+<style>
+.notFound_image{
+    display: flex;
+	place-content: center;
+}
+.notFound_image img{
+
+}
+</style>
