adjust about pills

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -6,7 +6,7 @@ const currentYear = new Date().getFullYear();
 <footer>
 	<div class="group">
 		<p>
-			This template was taken from <a href="https://astro.build/">Astro</a> <Icon icon="rocket-launch" size="1.2em" />, designed by <strong>Jeanine White.</strong> 
+			This template was taken from <a href="https://astro.build/"><strong>Astro</strong> </a> <Icon icon="rocket-launch" size="1.2em" />, designed by Jeanine White. 
 			
 		</p>
 	</div>
