--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -23,7 +23,7 @@ import Icon from "../components/Icon.astro";
         <img
           width="1553"
           height="873"
-          src="/assets/at-work.jpg"
+          src="/assets/working.jpg"
           alt="Jairo Avila at work with a colleague"
         />
       </Hero>
