--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -32,7 +32,7 @@ const projects = (await getCollection("work"))
     <div class="wrapper stack gap-8 lg:gap-20">
       <header class="hero">
         <Hero
-          title="Jairo Avila"
+          title="Jairo Avila Maury"
           tagline="System Engineer | Web developer | QA Engineer"
           align="start"
         >
