--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -22,8 +22,8 @@ import Icon from "../components/Icon.astro";
       </div>
         <img
           width="1553"
-          height="873"
-          src="/assets/working.jpg"
+          height="673"
+          src="/assets/development.png"
           alt="Jairo Avila at work with a colleague"
         />
       </Hero>
@@ -143,7 +143,7 @@ import Icon from "../components/Icon.astro";
 
   @media (min-width: 50em) {
     .phrase h4{
-    font-size: 1.0em;
+    font-size: 1.1em;
     
   }
     .about {
