--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -49,7 +49,7 @@ const projects = (await getCollection("work"))
           alt="Jairo Avila Maury smiling in a white shirt and his glasses"
           width="480"
           height="620"
-          src="/assets/perfil2.png"
+          src="/assets/animated-developer.webp"
         />
       </header>
       <Skills />
